delete public direcotry

--- a/_config.yml
+++ b/_config.yml
@@ -78,5 +78,5 @@ theme: landscape
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy: type:git
-  repo:https://github.com/geocompass/geocompass.github.io.git
-  branch:master
+  repository:https://github.com/geocompass/geocompass.github.io.git
+  branch:hexo
