开启头部，blog动画 添加关于写作的提交问题选项

--- a/themes/miho/_config.yml
+++ b/themes/miho/_config.yml
@@ -75,7 +75,7 @@ cover_picture: images/map.jpg
 # Open background particles | 开启背景粒子
 open_bg_particle: true
 # Open animation in homepage and head | 开启主页及头部动画
-open_animation: false
+open_animation: true
 
 # Article
 
